--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,22 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+		<dependency>
+		    <groupId>org.powermock</groupId>
+		    <artifactId>powermock-module-junit4</artifactId>
+		    <version>1.7.0RC2</version>
+            <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.powermock</groupId>
+		    <artifactId>powermock-api-mockito</artifactId>
+		    <version>1.7.0RC2</version>
+            <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>joda-time</groupId>
+		    <artifactId>joda-time</artifactId>
+		    <version>2.9.7</version>
+			</dependency>
+   </dependencies>
 </project>
